--- a/BE/package.json
+++ b/BE/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/react": "^19.1.12",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -23,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "react": "^19.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
