--- a/BE/package.json
+++ b/BE/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:survey": "node src/Script/seedSurvey.js"
+
   },
   "type": "module",
   "author": "",
