--- a/BE/package.json
+++ b/BE/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^7.2.1",
     "google-auth-library": "^10.3.0",
     "helmet": "^8.1.0",
+    "openai": "^4.72.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
