--- a/BE/package.json
+++ b/BE/package.json
@@ -6,7 +6,8 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:survey": "node src/Script/seedSurvey.js"
+    "seed:data": "node src/Script/seedData.js"
+
 
   },
   "type": "module",
@@ -20,16 +21,17 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
     "google-auth-library": "^10.3.0",
     "helmet": "^8.1.0",
-    "openai": "^4.72.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.9",
+    "openai": "^4.72.0",
     "passport": "^0.7.0",
     "react": "^19.1.1"
   },
