--- a/projects/package.json
+++ b/projects/package.json
@@ -31,7 +31,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "^0.79.5",
@@ -44,7 +44,9 @@
     "react-native-webview": "13.13.5",
     "tamagui": "^1.132.23",
     "zod": "^4.1.5",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
