--- a/projects/app.json
+++ b/projects/app.json
@@ -4,7 +4,7 @@
     "slug": "FE-seeker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "..\/assets/images/icon.png",
     "scheme": "feseeker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
