--- a/projects/package.json
+++ b/projects/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@tamagui/config": "^1.135.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
