--- a/projects/package.json
+++ b/projects/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@tamagui/config": "^1.135.4",
+    "@tamagui/lucide-icons": "^1.135.4",
+    "@tamagui/metro-plugin": "^1.135.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -37,6 +39,7 @@
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
