--- a/BE/package.json
+++ b/BE/package.json
@@ -6,7 +6,9 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:data": "node src/Script/seedData.js"
+    "seed:data": "node src/Script/seedData.js",
+    "generateTraindata": "node src/Script/generateTraindata.js",
+    "trainModel": "node src/Script/trainModel.js"
 
 
   },
