--- a/projects/package.json
+++ b/projects/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@tamagui/config": "^1.135.4",
@@ -44,6 +45,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "^0.5.1",
+    "sonner": "^2.0.3",
     "tamagui": "^1.135.4"
   },
   "devDependencies": {
