--- a/projects/package.json
+++ b/projects/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
     "expo": "^54.0.19",
+    "expo-av": "~16.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-router": "^6.0.9",
     "expo-splash-screen": "^31.0.10",
