--- a/BE/package.json
+++ b/BE/package.json
@@ -27,11 +27,13 @@
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.6.0",
     "google-auth-library": "^10.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "openai": "^4.72.0",
     "passport": "^0.7.0",
