--- a/BE/package.json
+++ b/BE/package.json
@@ -7,9 +7,7 @@
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:data": "node src/Script/seedData.js",
-    "seed:audio": "node src/Script/seedAudioContent.js",
-    "generateTraindata": "node src/Script/generateTraindata.js",
-    "trainModel": "node src/Script/trainModel.js"
+    "seed:audio": "node src/Script/seedAudioContent.js"
   },
   "type": "module",
   "author": "",
