--- a/projects/package.json
+++ b/projects/package.json
@@ -25,7 +25,10 @@
     "dotenv": "^17.2.2",
     "expo": "^54.0.25",
     "expo-av": "~16.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-router": "^6.0.9",
     "expo-splash-screen": "^31.0.10",
     "expo-sqlite": "^16.0.8",
