--- a/projects/package.json
+++ b/projects/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
@@ -26,6 +26,7 @@
     "expo": "^54.0.25",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.13",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eas-cli": "^16.28.0",
     "typescript": "~5.9.2"
   }
 }
