--- a/projects/package.json
+++ b/projects/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@tamagui/config": "^1.135.4",
     "@tamagui/lucide-icons": "^1.135.4",
     "@tamagui/metro-plugin": "^1.135.4",
+    "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -48,6 +49,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "^0.5.1",
     "sonner": "^2.0.3",
