--- a/BE/package.json
+++ b/BE/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@types/react": "^19.1.12",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.6.0",
     "google-auth-library": "^10.3.0",
@@ -35,7 +36,9 @@
     "nodemailer": "^7.0.9",
     "openai": "^4.72.0",
     "passport": "^0.7.0",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "sharp": "^0.34.5",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
