--- a/projects/package.json
+++ b/projects/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.13",
     "expo-router": "^6.0.9",
