--- a/projects/package.json
+++ b/projects/package.json
@@ -24,17 +24,18 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
-    "expo": "^54.0.25",
-    "expo-av": "~16.0.7",
+    "expo": "~54.0.29",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
-    "expo-device": "~8.0.9",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-notifications": "~0.32.13",
-    "expo-router": "^6.0.9",
-    "expo-splash-screen": "^31.0.10",
-    "expo-sqlite": "^16.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
+    "expo-sqlite": "~16.0.10",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
@@ -49,6 +50,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.2",
