--- a/projects/package.json
+++ b/projects/package.json
@@ -4,38 +4,39 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^6.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
-    "@tamagui/config": "^1.135.4",
-    "@tamagui/lucide-icons": "^1.135.4",
-    "@tamagui/metro-plugin": "^1.135.4",
-    "axios": "^1.6.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
+    "@tamagui/config": "^1.140.4",
+    "@tamagui/lucide-icons": "^1.140.4",
+    "@tamagui/metro-plugin": "^1.140.4",
+    "@tamagui/toast": "^1.140.4",
     "bcryptjs": "^3.0.2",
+    "burnt": "^0.13.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
-    "expo": "~54.0.29",
-    "expo-av": "~16.0.8",
+    "expo": "^54.0.23",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.20",
-    "expo-device": "~8.0.10",
-    "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "~8.0.10",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.15",
-    "expo-router": "~6.0.19",
-    "expo-splash-screen": "~31.0.12",
-    "expo-sqlite": "~16.0.10",
+    "expo-router": "~6.0.14",
+    "expo-splash-screen": "^31.0.10",
+    "expo-sqlite": "~16.0.9",
+    "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
@@ -46,23 +47,22 @@
     "nodemailer": "^7.0.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "^0.81.5",
+    "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "^0.5.1",
-    "sonner": "^2.0.3",
-    "tamagui": "^1.135.4"
+    "tamagui": "^1.140.4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "~19.1.10",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eas-cli": "^16.28.0",
     "typescript": "~5.9.2"
   }
 }
