--- a/projects/.tamagui/tamagui.config.json
+++ b/projects/.tamagui/tamagui.config.json
@@ -35949,28 +35949,17 @@
     "onlyAllowShorthands": false,
     "fontLanguages": [],
     "animations": {
-      "animations": {
-        "75ms": "ease-in 75ms",
-        "100ms": "ease-in 100ms",
-        "200ms": "ease-in 200ms",
-        "bouncy": "ease-in 200ms",
-        "superBouncy": "ease-in 500ms",
-        "lazy": "ease-in 1000ms",
-        "medium": "ease-in 300ms",
-        "slow": "ease-in 500ms",
-        "quick": "cubic-bezier(0.215, 0.610, 0.355, 1.000) 400ms",
-        "quicker": "cubic-bezier(0.215, 0.610, 0.355, 1.000) 300ms",
-        "quickest": "cubic-bezier(0.215, 0.610, 0.355, 1.000) 200ms",
-        "tooltip": "ease-in 400ms"
-      },
-      "usePresence": "Function",
-      "ResetPresence": "Function",
+      "isReactNative": false,
       "supportsCSS": true,
       "classNameAnimation": true,
+      "isStub": true,
+      "animations": {},
+      "useAnimations": "Function",
+      "usePresence": "Function",
+      "ResetPresence": "Function",
       "useAnimatedNumber": "Function",
-      "useAnimatedNumberReaction": "Function",
       "useAnimatedNumberStyle": "Function",
-      "useAnimations": "Function"
+      "useAnimatedNumberReaction": "Function"
     },
     "media": {
       "sm": {
