--- a/projects/package.json
+++ b/projects/package.json
@@ -29,6 +29,7 @@
     "expo": "^54.0.23",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
+    "expo-device": "^8.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
@@ -36,7 +37,7 @@
     "expo-router": "~6.0.14",
     "expo-splash-screen": "^31.0.10",
     "expo-sqlite": "~16.0.9",
-    "expo-status-bar": "~3.0.8",
+    "expo-status-bar": "~3.0.9",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
@@ -54,6 +55,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "^0.5.1",
     "tamagui": "^1.140.4",
