--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ yarn-error.log*
 # OS/editor artifacts
 .DS_Store
 .vscode/
+
+# Bỏ qua model AI
+*.safetensors
+*.bin
+BE/ai_model/mistral-dream-vn-finetuned/
+BE/ai_model/model_finetuned/
