--- a/projects/package.json
+++ b/projects/package.json
@@ -14,19 +14,20 @@
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/native": "^7.1.19",
-    "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@tamagui/config": "^1.140.4",
     "@tamagui/lucide-icons": "^1.140.4",
     "@tamagui/metro-plugin": "^1.140.4",
     "@tamagui/toast": "^1.140.4",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "burnt": "^0.13.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
-    "expo": "^54.0.23",
+    "expo": "~54.0.30",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.10",
@@ -46,8 +47,8 @@
     "lucide-react-native": "^0.546.0",
     "mongoose": "^8.18.2",
     "nodemailer": "^7.0.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -57,13 +58,13 @@
     "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.2",
-    "react-native-worklets": "^0.5.1",
+    "react-native-worklets": "0.5.1",
     "tamagui": "^1.140.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   }
